# cctv-canvas-hub

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  window.html
.ast-grep/rules/architecture/: barrel-export-enforcement.yml  hooks-in-hooks-dir.yml  no-direct-ipc-in-components.yml
.ast-grep/rules/zustand/: no-destructure.yml
.claude/agents/: plan-architect-reviewer.md  plan-quality-checker.md  plan-reality-checker.md  pr-test-analyzer.md  rust-reviewer.md  silent-failure-hunter.md  type-design-analyzer.md  typescript-reviewer.md
.claude/commands/: react-tauri-rust-code-review.md  react-tauri-rust-plan-review.md
.claude/skills/driving-agent-shell/: SKILL.md
.claude/skills/live-smoke-testing/: SKILL.md
.githooks/: pre-commit
docs/: CONTRIBUTING.md  SECURITY.md  USING_THIS_TEMPLATE.md  tasks.md
docs/code-reviews/: deferred.md  pr-10-fixes-review.md  pr-10-review.md  pr-11-review.md  pr-2-fixes-review.md  pr-2-review.md  pr-4-fixes-review-2.md  pr-4-fixes-review.md  pr-4-review.md  pr-6-fixes-review-r2.md  pr-6-fixes-review.md  pr-6-review.md  pr-7-fixes-review.md  pr-7-review.md  pr-8-fixes-review.md  pr-8-review.md  pr-9-fixes-review-r2.md  pr-9-fixes-review.md  pr-9-review.md
docs/developer/: README.md  architecture-guide.md  command-system.md  cross-platform.md  data-persistence.md  error-handling.md  external-apis.md  keyboard-shortcuts.md  logging.md  menus.md  quick-panes.md  releases.md  rust-architecture.md  state-management.md  supabase-integration.md  tauri-commands.md  testing.md  ui-patterns.md  writing-ast-grep-rules.md
docs/plan-reviews/: pr-1-plan-fixes-review.md  pr-1-plan-review.md  pr-3-plan-fixes-review.md  pr-3-plan-review.md  pr-5-plan-fixes-review.md  pr-5-plan-review.md  review-pipeline-handoff.md
locales/: ar.json  en.json  fr.json
scripts/: migrate-to-features.js  verify-architecture.js
src/: App.test.tsx  App.tsx  main.tsx  quick-pane-main.tsx  theme-variables.css  window-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: view-windows.json
src-tauri/crates/platform-utils/: Cargo.toml
src-tauri/crates/platform-utils/src/: lib.rs
src-tauri/crates/secure-vault/: Cargo.toml
src-tauri/crates/secure-vault/src/: lib.rs
src-tauri/src/: bindings.rs  lib.rs  types.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/cloud_session/: mod.rs
src-tauri/src/features/cloud_session/commands/: mod.rs
src-tauri/src/features/cloud_session/services/: mod.rs
src-tauri/src/features/cloud_session/types/: mod.rs
src-tauri/src/features/documentation/: mod.rs
src-tauri/src/features/documentation/case_notes/: mod.rs
src-tauri/src/features/documentation/case_notes/commands/: mod.rs
src-tauri/src/features/documentation/case_notes/services/: mod.rs
src-tauri/src/features/documentation/case_notes/types/: mod.rs
src-tauri/src/features/documentation/notes/: mod.rs
src-tauri/src/features/documentation/notes/commands/: mod.rs
src-tauri/src/features/documentation/notes/services/: mod.rs
src-tauri/src/features/documentation/notes/types/: mod.rs
src-tauri/src/features/documentation/shared/: mod.rs
src-tauri/src/features/example_feature/: mod.rs
src-tauri/src/features/example_feature/commands/: mod.rs
src-tauri/src/features/example_feature/services/: mod.rs
src-tauri/src/features/example_feature/types/: mod.rs
src-tauri/src/features/notifications/: mod.rs
src-tauri/src/features/preferences/: mod.rs
src-tauri/src/features/preferences/commands/: mod.rs
src-tauri/src/features/preferences/types/: mod.rs
src-tauri/src/features/quick_pane/: mod.rs
src-tauri/src/features/quick_pane/commands/: mod.rs
src-tauri/src/features/recovery/: mod.rs
src-tauri/src/features/recovery/commands/: mod.rs
src-tauri/src/features/recovery/types/: mod.rs
src-tauri/src/features/view_windows/: mod.rs
src-tauri/src/features/view_windows/commands/: mod.rs
src-tauri/src/features/view_windows/services/: mod.rs
src-tauri/src/features/view_windows/types/: mod.rs
src-tauri/src/utils/: platform.rs
src-tauri/tests/: platform_tests.rs
src/components/: ErrorBoundary.tsx  LanguageSync.tsx  ThemeProvider.tsx
src/hooks/: use-keyboard-shortcuts.ts  use-theme.ts  useConnectionHealth.ts  useMainWindowEventListeners.ts
src/i18n/: config.ts
src/lib/: bindings.ts  context-menu.ts  logger.ts  menu.ts  tauri-bindings.ts
src/store/: health-store.test.ts  health-store.ts
src/test/: feature-test-utils.tsx  setup.ts
(+161 files in other folders)
