[workspace]
members = [".", "crates/platform-utils"]
# default-members drives bare `cargo test` (what `npm run rust:test` runs) to
# include the pure-logic crates, not just the root package. The root tauri-app's
# own lib harness is disabled below (`[lib] test = false`) so it never hits the
# Windows WebView2 crash, while the crates run their `#[cfg(test)]` tests.
default-members = [".", "crates/platform-utils"]
resolver = "2"

[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
rust-version = "1.82"
# This crate ships two binaries (tauri-app + gen_bindings). Without default-run,
# a bare `cargo run` — which is what `tauri dev` / `npm run tauri dev` invoke —
# aborts with "could not determine which binary to run". Pinning the app binary
# makes every launch path (npx tauri dev, npm run tauri dev, cargo run) seamless;
# `cargo run --bin gen_bindings` still works explicitly.
default-run = "tauri-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
# Disable the app crate's unit-test harness: on Windows it links tauri/WebView2
# and fails to load from target/debug/deps/ (STATUS_ENTRYPOINT_NOT_FOUND) before
# any test runs. Pure-logic tests live in the Tauri-free workspace crates under
# crates/ instead (see AGENTS.md "Testing Pure Rust Logic" + docs/developer/
# testing.md); [workspace] default-members makes bare `cargo test` run them.
test = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
log = "0.4"
regex = "1"

# Pure-logic workspace crate — the template's example of unit-testable Rust that
# lives outside the Tauri crate (see crates/platform-utils + docs/developer/testing.md).
platform-utils = { path = "crates/platform-utils" }

# Type-safe Tauri command bindings
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "=0.0.9"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# macOS-only: NSPanel for native panel behavior (fullscreen overlay, click-outside dismiss)
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

# Optimize for smaller binary size in release builds
[profile.release]
codegen-units = 1        # Better LLVM optimization (slower build, smaller binary)
lto = true               # Link-time optimizations
opt-level = "s"          # Optimize for size over speed
panic = "abort"          # Don't include panic unwinding code
strip = true             # Remove debug symbols

